--- a/darkmode/dark-mode.css
+++ b/darkmode/dark-mode.css
@@ -1,5 +1,5 @@
 [data-theme="dark"] {
-  background-color: #111 !important;
+  background-color: #1a1a1a !important;
   color: #eee;
 }
 
@@ -15,6 +15,9 @@
   background-color: #eee !important;
 }
 
+[data-theme="dark"] .topbar {
+  background-color: #404040 !important;
+}
 h1 {
   padding-left: 90px;
 }
